[package]
name = "groestlcoinconsensus"
version = "2.19.1"
authors = ["Groestlcoin Devs <groestlcoin@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/Groestlcoin/rust-groestlcoinconsensus/"
repository = "https://github.com/Groestlcoin/rust-groestlcoinconsensus/"
description = "Groestlcoin's libgroestlcoinconsensus with Rust binding."
keywords = [ "groestlcoin", "groestlcoinconsensus"]
readme = "README.md"
exclude = ["/groestlcoin/tools/**", "/groestlcoin/qa/pull-tester/**", "/groestlcoin/foreign/**", "/groestlcoin/.github/**", "/groestlcoin/.tx/**", "/groestlcoin/build-aux/**", "/groestlcoin/contrib/**", "/groestlcoin/depends/**", "/groestlcoin/doc/**", "/groestlcoin/share/**", "/groestlcoin/test/**", "/groestlcoin/src/bench/**", "/groestlcoin/src/config/**", "/groestlcoin/src/consensus/**", "/groestlcoin/src/leveldb/**", "/groestlcoin/src/objtest/**", "/groestlcoin/src/obj/**", "/groestlcoin/src/policy/**", "/groestlcoin/src/qt/**", "/groestlcoin/src/rpc/**", "/groestlcoin/src/support/**", "/groestlcoin/src/test/**", "/groestlcoin/src/univalue/**", "/groestlcoin/src/wallet/**", "/groestlcoin/src/zmq/**"]
build = "build.rs"

[lib]
name = "groestlcoinconsensus"
path = "src/lib.rs"

[features]
external-secp = []

[dependencies]
libc="0.2"

[build-dependencies]
cc = ">= 1.0.36, <= 1.0.41"

[dev-dependencies]
rustc-serialize = "0.3"
