[package]
name = "groestlcoinconsensus"
version = "2.19.1"
authors = ["Groestlcoin Devs <groestlcoin@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/Groestlcoin/rust-groestlcoinconsensus/"
repository = "https://github.com/Groestlcoin/rust-groestlcoinconsensus/"
description = "Groestlcoin's libgroestlcoinconsensus with Rust binding."
keywords = [ "groestlcoin", "groestlcoinconsensus"]
readme = "README.md"
exclude = ["/depend/groestlcoin/tools/**", "/depend/groestlcoin/qa/pull-tester/**", "/depend/groestlcoin/foreign/**", "/depend/groestlcoin/.github/**", "/depend/groestlcoin/.tx/**", "/depend/groestlcoin/build-aux/**", "/depend/groestlcoin/contrib/**", "/depend/groestlcoin/depends/**", "/depend/groestlcoin/doc/**", "/depend/groestlcoin/share/**", "/depend/groestlcoin/test/**", "/depend/groestlcoin/src/bench/**", "/depend/groestlcoin/src/config/**", "/depend/groestlcoin/src/consensus/**", "/depend/groestlcoin/src/leveldb/**", "/depend/groestlcoin/src/policy/**", "/depend/groestlcoin/src/qt/**", "/depend/groestlcoin/src/rpc/**", "/depend/groestlcoin/src/support/**", "/depend/groestlcoin/src/test/**", "/depend/groestlcoin/src/univalue/**", "/depend/groestlcoin/src/wallet/**", "/depend/groestlcoin/src/zmq/**"]
build = "build.rs"

[lib]
name = "groestlcoinconsensus"
path = "src/lib.rs"

[features]
external-secp = []

[dependencies]
libc="0.2"

[build-dependencies]
cc = ">= 1.0.36, <= 1.0.41"

[dev-dependencies]
rustc-serialize = "0.3"
